# mordant

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PYTHON_BINDINGS_IMPLEMENTATION_PLAN.md  PYTHON_BINDINGS_OVERVIEW.md  QUICKREF.md  README.md  ThirdPartyNotices.md  build.rs
.github/workflows/: python-bindings.yml  release.yml
mordant-py/: Cargo.toml  README.md  generate_themes.py  lib.7z  mordant-linter-improvement-plan.md  mordant-linter-improvement-status.md  mordant.pyd  pyproject.toml  spec_info.txt  test_rc.py
mordant-py/benchmarks/: README.md  benchmarks.py  benchmarks_gil.py  results_final.json  results_gil.json  results_gil_final.json
mordant-py/benchmarks/fixtures/: generate_fixtures.py  large.md  medium.md  small.md
mordant-py/example/: demo.md  md_viewer.py
mordant-py/mordant/: __init__.py  __init__.pyi  __main__.py
mordant-py/mordant/themes/: Panda.json  ayu-light.json  ayu-mirage.json
mordant-py/src/: chunker.rs  diagram.rs  document.rs  emoji.rs  errors.rs  footnote.rs  highlighter.rs  lib.rs  linter.rs  math.rs  mermaid_theme.rs  meta.rs  node.rs  options.rs  themes.rs  vscode_theme.rs  walker.rs
mordant-py/tests/: test_ast.py  test_chunker.py  test_commonmark_spec.py  test_core.py  test_diagram.py  test_emoji.py  test_extracted_chunk.py  test_footnote.py  test_gfm.py  test_highlighting.py  test_lint.py  test_math.py  test_meta.py  test_mixed_features.py  test_okf_chunker_methods.py  test_options.py  test_vscode_theme.py
pyproject/: pyproject.toml
pyproject/pyproject/: __init__.py
src/: ast.rs  context.rs  error.rs  lib.rs  test.rs  text.rs  util.rs
src/parser/: attribute.rs  auto_link.rs  blockquote.rs  code_block.rs  code_span.rs  delimiter.rs  emphasis.rs  heading.rs  html_block.rs  link.rs  link_ref.rs  linkify.rs  list.rs  mod.rs  paragraph.rs  raw_html.rs  table.rs  task_list_item.rs  thematic_break.rs
src/renderer/: html.rs  mod.rs
src/scanner/: mod.rs  scanner_gen.rs
tests/: ast.rs  commonmark_spec.rs  extension.rs  gfm.rs  override_renderer.rs
