[package]
name = "mordant"
version = "0.8.9"
edition = "2021"
rust-version = "1.87"
description = "Mordant - A fast CommonMark + GFM Markdown parser for Python, powered by the rushdown Rust library"
license = "MIT"

[lib]
name = "mordant"
crate-type = ["cdylib"]

[dependencies]
rushdown = { path = "..", default-features = false, features = ["std", "html-entities"] }
pyo3 = { version = "0.29", features = ["abi3-py39"] }
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-peg = "1.0.9"
emojis = "0.8.0"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
syntect-assets = "0.23.6"
jsonc-parser = { version = "0.32", features = ["serde"] }
katex = { package = "katex-rs", version = "0.2.4" }
mermaid-rs-renderer = { version = "0.3", default-features = false }
