[build-system]
requires = ["maturin>=1.0.0"]
build-backend = "maturin"

[project]
name = "mordant"
version = "0.8.5"
description = "Mordant - A fast CommonMark + GFM Markdown parser for Python"
requires-python = ">=3.9"

[tool.maturin]
# Include the themes directory as package data
package-dir = "mordant"

[tool.maturin.modules]
# The Rust extension
mordant = "target/release/mordant.dll"
