[build-system]
requires = ["maturin>=1.0.0"]
build-backend = "maturin"

[project]
name = "mordant"
version = "0.8.11"
description = "Mordant - A fast CommonMark + GFM Markdown parser for Python"
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "opticsWolf"},
]
keywords = ["markdown", "commonmark", "gfm", "parser", "renderer", "mermaid", "math", "katex", "lint", "syntax-highlighting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
Homepage = "https://github.com/opticsWolf/mordant"
Repository = "https://github.com/opticsWolf/mordant"
Documentation = "https://github.com/opticsWolf/mordant/blob/main/README.md"
"Bug Tracker" = "https://github.com/opticsWolf/mordant/issues"

[tool.maturin]
# Include the themes directory as package data
package-dir = "mordant"
include = ["mordant/themes/**/*"]

[tool.maturin.modules]
# The Rust extension
mordant = "target/release/mordant.dll"